reboot.scss and some var/mix structure

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -78,6 +78,32 @@
     background: none;
 }
 
+@mixin hover {
+    &:hover { @content }
+}
+
+@mixin hover-focus {
+    &:focus,
+    &:hover {
+        @content
+    }
+}
+
+@mixin plain-hover-focus {
+    &,
+    &:focus,
+    &:hover {
+        @content
+    }
+}
+
+@mixin hover-focus-active {
+    &:focus,
+    &:active,
+    &:hover {
+        @content
+    }
+}
 // =============================================================================
 // String Replace
 // =============================================================================
